--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "slim-api-requster",
-  "version": "0.0.1",
+  "name": "slim-api-requester",
+  "version": "0.0.2",
   "description": "Обертка над axios для выполнения запросов",
   "main": "lib/index.js",
   "types": "lib",
@@ -8,7 +8,7 @@
   "private": false,
   "repository": {
     "type": "git",
-    "url": "https://github.com/OlegChulakovStudio/slim-api-requster"
+    "url": "https://github.com/OlegChulakovStudio/slim-api-requester"
   },
   "scripts": {
     "build": "tsc --build",
